fix spacing for header

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,31 +1,34 @@
 
+// disable site header for desktop
 .site-header {
-    visibility: collapse;
+  visibility: collapse;
+  height: 0;
+  min-height: 0;
 }
 
 // How the posts list looks like on home page
 ul.list {
-    list-style: inside;
-    margin-left: 0;
+  list-style: inside;
+  margin-left: 0;
 }
 
+// Take into account sidebar on desktop
 .wrapper {
-    margin-left: 15em;
+  margin-left: 15em;
 }
 
 .post-content {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 @include media-query($on-palm) {
-    // Make site header visible to mobile
-    .site-header {
-        visibility: visible;
-    }
-    
-    // Remove left indent since no sidebar
-    .wrapper {
-        margin-left: auto;
-    }
+  // Make site header visible to mobile
+  .site-header {
+    visibility: visible;
+    min-height: $spacing-unit * 1.865;
+  }
+  // Remove left indent since no sidebar
+  .wrapper {
+      margin-left: auto;
+  }
 }
-
